# article-extractor

./: .gitignore  Makefile  README.md  fries.py  pyproject.toml
src/blog_post_extractor/: cli.py  extract_blog_post.py  logger.py
tests/: test_extract_text_only.py
