[project]
name = "blog-post-extractor"
version = "0.1.0"
description = ""
authors = [{ name = "Ramon Moraes" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["requests (>=2.32.3,<3.0.0)", "beautifulsoup4"]
license = "MIT"

[tool.poetry]
packages = [{ include = "blog_post_extractor", from = "src" }]

[project.scripts]
blog_post_extractor = "blog_post_extractor.cli:main"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
